<resources>
    <string name="app_name">Newzzzy</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="business_headlines">Business Headlines</string>
    <string name="sports_headlines">Sports Headlines</string>
    <string name="login_page_greeting">Namaste.</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="already_a_user_log_in">Already a user? Log in.</string>
    <string name="new_user_sign_up">New here? Sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="science">Science</string>
    <string name="tech">Technology</string>
    <string name="health">Health</string>
    <string name="made_with_by_rounak_singh">Made with ❤ by Rounak Singh</string>
    <string name="nav_header_title">Newzzzy.</string>
    <string name="connection_back">Back online</string>
    <string name="no_connection">No internet</string>
</resources>
