<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.activities.MainActivity">

    <data>

        <variable
            name="mainViewModel"
            type="me.rounak.newzzzy.ui.main.viewmodel.MainViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/imageViewSideNav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_25dp"
                    android:src="@drawable/ic_news_side_nav"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewBookmarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_25dp"
                    android:src="@drawable/ic_bookmarks"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/refreshLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/tabLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewSideNav"
                    app:refreshing="@{mainViewModel.refreshStatus}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_25dp"
                            android:text="@string/top_headlines"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="24sp"
                            android:textColor="@color/black" />

                        <androidx.viewpager2.widget.ViewPager2
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:id="@+id/viewPager"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabIndicator="@null"
                    app:tabMode="scrollable"
                    app:tabRippleColor="@null"
                    app:tabSelectedTextColor="@color/tab_color"
                    app:tabTextAppearance="@style/BottomNavTheme">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/science"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/science" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tech" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/Sports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sports" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/politics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/politics" />

                </com.google.android.material.tabs.TabLayout>

                <LinearLayout
                    android:id="@+id/layoutNetworkState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textViewConnectionStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_16sp"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/text_main"
                        android:padding="@dimen/padding_8dp"
                        android:drawablePadding="@dimen/padding_8dp"
                        app:drawableTint="@color/connection_text_icon" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/sideNavDrawer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/nav_drawer_bg"
            app:itemTextAppearance="@style/NavigationDrawerTextStyle"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/menu_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>
